--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss": "^8.4.47",
     "postcss-loader": "^8.1.1",
     "postcss-preset-env": "^10.0.9",
+    "pug-plugin": "^5.3.0",
     "sass": "^1.80.6",
     "sass-loader": "^16.0.3",
     "webpack": "^5.96.1",
